projet_gl/src/test/deca/lexer/valid/include.deca
// Description:
//    test lexer for include.
//
// Resultats:
//     Using local file ../../deca/syntax/valid/lexer/string.deca
//     STRING: [@0,165:183='"this is a string."',<46>,10:0]
//
// Historique:
//    cree le 10/01/2024

#include "string.deca"