projet_gl/src/test/deca/lexer/invalid/incorrectInclude.deca
// Description:
//    test lexer invalid for include.
//
// Resultats:
//    line=10 token recognition error at: '#include s'
//
// Historique:
//    cree le 10/01/2024

#include string.deca